Try to fix background on mobile.

--- a/wedding.css
+++ b/wedding.css
@@ -25,7 +25,7 @@ html {
   /* If I enable this then my android phone tries to use it and it looks awful. */
   /*background: linear-gradient(top, rgba(0, 191, 255, 1.0) 0%,rgba(255, 255, 255, 0.0) 100%), url('images/sky_forest.jpg'), black; /* W3C */
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center bottom;
 }
 body { font-family: sans-serif; }
 h1 { text-align: center; font-size: 21px; }
